module(name = "sslcompilers")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_kotlin", version = "1.9.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "sslcompilers_maven",
    artifacts = [
        "com.google.guava:guava:33.0.0-jre",
        "com.google.guava:guava-testlib:33.0.0-jre",
        "com.google.truth:truth:1.1.5",
        "com.google.truth.extensions:truth-java8-extension:1.1.5",
        "junit:junit:4.13.2",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "sslcompilers_maven")

bazel_dep(name = "rules_ruby", version = "0.8.1")
ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.3.0",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//ruby:Gemfile",
    gemfile_lock = "//ruby:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")
register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "googletest", version = "1.14.0")
